# g1_deploy_sonic

./: README.md  deploy.sh  files.txt  install.sh  quickstart.sh  uninstall.sh  visualize_motion.py
data/example_scalelab/qwen_50fps/: case_test01.pkl  case_test02.pkl  case_test03.pkl  case_test04.pkl  case_test05.pkl  case_test06.pkl  case_test07.pkl  case_test08.pkl  case_test09.pkl  case_test10.pkl  case_test11.pkl  case_test12.pkl  case_test13.pkl  case_test14.pkl  case_test15.pkl  case_test_add.pkl
data/example_scalelab/qwen_50fps_waist/: case_test01_waist.pkl  case_test02_waist.pkl  case_test03_waist.pkl  case_test04_waist.pkl  case_test05_waist.pkl  case_test06_waist.pkl  case_test07_waist.pkl  case_test08_waist.pkl  case_test09_waist.pkl  case_test10_waist.pkl  case_test11_waist.pkl  case_test12_waist.pkl  case_test13_waist.pkl  case_test14_waist.pkl  case_test15_waist.pkl
data/example_scalelab/qwen_audio_new/: COMMANDS.txt  DEPLOYMENT_GUIDE.md  README.md  audio_test.pkl
overlay/gear_sonic_deploy/: deploy.sh
overlay/gear_sonic_deploy/reference/: convert_motions.py
overlay/gear_sonic_deploy/src/audio_thread/: CMakeLists.txt  audio_thread.cpp  audio_thread.hpp  play_audio_debug.cpp
planner/target_vel/V2/: planner_sonic.onnx
reference/: align_audio_to_motion.py  convert_motions.py  package_motion_audio_dataset.py  package_single_motion_with_audio.py
reference/example_scalelab/: 使用教程
reference/example_scalelab/long_case/: audio_cn_01-05_test.pkl  audio_cn_06-10_test.pkl  audio_cn_11-15_test.pkl  (+3 more)
src/audio_thread/: audio_thread.cpp  audio_thread.hpp
(+537 files in other folders)
